# eventsourcing-aggregate8

./: .gitignore  application.py  domainmodel.py  pyproject.toml  test_application.py  test_compression_and_encryption.py  test_snapshotting_intervals.py
