[tool.poetry]
name = "aggregate8"
version = "0.1.0"
description = ""
authors = ["ZHANG Cheng <czhang.oss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "<2.0"
orjson = "^3.9.3"
eventsourcing = {extras = ["crypto"], version = "^9.2.20"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
